--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -141,7 +141,6 @@
         <script src="bower_components/json3/lib/json3.js"></script>
         <script src="bower_components/ng-file-upload/ng-file-upload.js"></script>
         <script src="bower_components/ngInfiniteScroll/build/ng-infinite-scroll.js"></script>
-        <script src="bower_components/webcomponentsjs/webcomponents.js"></script>
         <script src="bower_components/angular-animate/angular-animate.js"></script>
         <script src="bower_components/AngularJS-Toaster/toaster.js"></script>
         <!-- endbower -->
@@ -279,7 +278,7 @@
     <script src="scripts/components/entities/message/message.service.js"></script>
     <script src="scripts/components/entities/message/message.search.service.js"></script>
     <script src="bower_components/ngmap/build/scripts/ng-map.min.js"></script>
-    <script src="https://maps.google.com/maps/api/js?libraries=visualization,drawing,geometry,places"></script>
+    <script src="https://maps.google.com/maps/api/js?libraries=placeses,visualization,drawing,geometry,places"></script>
     <!--<script src="scripts/app/main/login.controller.js"></script>-->
     <script src="bower_components/alv-ch-ng.text-truncate/dist/alv-ch-ng.textTruncate.js"></script>
     <script src="bower_components/ngGallery/src/js/ngGallery.js"></script>
