--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -279,7 +279,7 @@
     <script src="scripts/components/entities/message/message.search.service.js"></script>
     <script src="bower_components/ngmap/build/scripts/ng-map.min.js"></script>
     <script src="https://maps.google.com/maps/api/js?libraries=placeses,visualization,drawing,geometry,places"></script>
-    <!--<script src="scripts/app/main/login.controller.js"></script>-->
+    <script src="scripts/app/main/login.controller.js"></script>
     <script src="bower_components/alv-ch-ng.text-truncate/dist/alv-ch-ng.textTruncate.js"></script>
     <script src="bower_components/ngGallery/src/js/ngGallery.js"></script>
     <!-- endbuild -->
