--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -14,8 +14,10 @@
         <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
         <link rel="stylesheet" href="bower_components/AngularJS-Toaster/toaster.css" />
         <link rel="stylesheet" type="text/css" href="bower_components/ngGallery/src/css/screen.css">
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+        <link rel="stylesheet" type="text/css" href="bower_components/angular-material/angular-material.css">
         <link rel="stylesheet" type="text/css" href="bower_components/ngGallery/src/css/ngGallery.css">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+              rel="stylesheet">
 
         <!-- endbower -->
         <!-- endbuild -->
@@ -29,85 +31,8 @@
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
     <div ng-show="{{ENV === 'dev'}}" ng-cloak=""></div>
-    <paper-drawer-panel force-narrow id="paperDrawerPanel">
-        <paper-scroll-header-panel drawer mode="seamed">
-            <paper-toolbar class="medium-tall">
-                <div>
-                    <a href="#/settings" style="display: block;">{{account.firstName}}</a>
-                    {{account.email}}
-                </div>
-            </paper-toolbar>
-            <paper-menu>
-                <a href="#/" class="paper-item-link">
-                    <paper-item>
-                        <iron-icon icon="icons:search" item-icon></iron-icon>
-                        Busqueda
-                    </paper-item>
-                </a>
-                <a href="#/spaces" class="paper-item-link">
-                    <paper-item>
-                        <iron-icon icon="icons:group-work" item-icon></iron-icon>
-                        Tus espacios
-                    </paper-item>
-                </a>
-                <a href="#/conversations" class="paper-item-link">
-                    <paper-item>
-                        <iron-icon icon="icons:question-answer" item-icon></iron-icon>
-                        Mensajes
-                    </paper-item>
-                </a>
-                <a href="#/favorites" class="paper-item-link">
-                    <paper-item>
-                        <iron-icon icon="icons:favorite" item-icon></iron-icon>
-                        <span>Favoritos</span>
-                    </paper-item>
-                </a>
-                <a href="#/settings" class="paper-item-link">
-                    <paper-item class="bor">
-                        <iron-icon icon="icons:settings" item-icon></iron-icon>
-                        Ajustes
-                    </paper-item>
-                </a>
-            </paper-menu>
-        </paper-scroll-header-panel>
-        <paper-header-panel main mode="waterfall">
-            <paper-toolbar>
-                <paper-icon-button icon="icons:menu" paper-drawer-toggle></paper-icon-button>
-                <span href="#/" class="title">CoWork</span>
-            </paper-toolbar>
-            <div ui-view="content"></div>
-            <!--
-            <div class="footer">
-                <p translate="footer">This is your footer</p>
-            </div>
-            -->
-        </paper-header-panel>
-    </paper-drawer-panel>
-    <div class="footer">
-        <p translate="footer">This is your footer</p>
-    </div>
-    <style>
-        .paper-toolbar-0{
-            background: #00bcd4;
-        }
-        paper-item > iron-icon{
-            width: 20px !important;
-            height: 20px !important;
-            margin-right: 22px;
-            color: #737373;
-        }
-        paper-menu > a:last-child paper-item.bor{
-            border-top: 1px solid rgba(0,0,0,0.38);
-        }
-    </style>
-
-    <style is="custom-style">
-        .paper-item-link{
-            color: inherit;
-            text-decoration: none;
-        }
-    </style>
-
+    <div ui-view="navbar" ng-cloak=""></div>
+    <div ui-view="content"></div>
         <!-- Google Analytics: uncomment and change UA-XXXXX-X to be your site's ID.
         <script>
             (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
@@ -120,7 +45,8 @@
 
         <!-- build:js scripts/vendor.js -->
         <!-- bower:js -->
-        <script src="bower_components/jquery/dist/jquery.js"></script>
+    <script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
+    <script src="bower_components/jquery/dist/jquery.js"></script>
         <script src="bower_components/angular/angular.js"></script>
         <script src="bower_components/angular-aria/angular-aria.js"></script>
         <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
@@ -142,6 +68,8 @@
         <script src="bower_components/ng-file-upload/ng-file-upload.js"></script>
         <script src="bower_components/ngInfiniteScroll/build/ng-infinite-scroll.js"></script>
         <script src="bower_components/angular-animate/angular-animate.js"></script>
+        <script src="bower_components/angular-aria/angular-aria.js" type="text/javascript" ></script>
+        <script src="bower_components/angular-material/angular-material.js" type="text/javascript" ></script>
         <script src="bower_components/AngularJS-Toaster/toaster.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
