--- a/src/main/webapp/scripts/app/entities/space/space-dialog.html
+++ b/src/main/webapp/scripts/app/entities/space/space-dialog.html
@@ -1,94 +1,91 @@
 <div class="container">
-    <form name="editForm" role="form" novalidate ng-submit="save()">
+    <div class="row">
+        <div class="col-lg-8 col-lg-push-2">
+            <form name="editForm" enctype="multipart/form-data" role="form" novalidate ng-submit="save()">
 
-        <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-hidden="true"
-                    ng-click="clear()">&times;</button>
-            <h4 class="modal-title" id="mySpaceLabel" translate="project1App.space.home.createOrEditLabel">Create or
-                edit a Space</h4>
-        </div>
-        <div class="modal-body">
-            <jh-alert-error></jh-alert-error>
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true"
+                            ng-click="clear()">&times;</button>
+                    <h4 class="modal-title" id="mySpaceLabel" translate="project1App.space.home.createOrEditLabel">Create or
+                        edit a Space</h4>
+                </div>
+                <div class="modal-body">
+                    <jh-alert-error></jh-alert-error>
 
-            <div class="form-group">
-                <label class="control-label" translate="project1App.space.name" for="field_name">Name</label>
-                <input type="text" class="form-control" name="name" id="field_name"
-                       ng-model="space.name"
-                />
-            </div>
+                    <div class="form-group">
+                        <label class="control-label" translate="project1App.space.name" for="field_name">Name</label>
+                        <input type="text" class="form-control" name="name" id="field_name"
+                               ng-model="space.name"
+                        />
+                    </div>
 
 
-            <form enctype="multipart/form-data" name="form">
 
-                Single Image with validations
-                <div ngf-drop ngf-multiple="true" class="ng-drop-file" ngf-select ng-model="file" name="file" ngf-pattern="'image/*'"
-                     ngf-accept="'image/*'" ngf-max-size="20MB" ngf-min-height="100">Select</div>
-                <!--Drop files: <div ngf-drop ng-model="files" class="drop-box">Drop</div>
--->
-                <button type="submit" ng-click="submit()">submit</button>
+                    Single Image with validations
+                    <div class="row">
+                        <div ngf-drop ngf-multiple="true" class="col-lg-6 col-lg-push-3 ng-drop-file" ngf-select ng-model="file" name="file" ngf-pattern="'image/*'"
+                             ngf-accept="'image/*'" ngf-max-size="20MB" ngf-min-height="100"><iron-icon icon="icons:file-upload" class="upload-icon"></iron-icon></div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="control-label" translate="project1App.space.description" for="field_description">Description</label>
+                        <input type="text" class="form-control" name="description" id="field_description"
+                               ng-model="space.description"
+                        />
+                    </div>
+                    <input class="form-control" autocomplete="no" places-auto-complete size=80
+                           ng-model="vm.address"
+                           component-restrictions="{country:'es'}"
+                           types="{{types}}"
+                           on-place-changed="vm.placeChanged()"/> <br/>
+                    <div ng-show="vm.place">
+                        Address = {{vm.place.formatted_address}} <br/>
+                        Location: {{vm.place.geometry.location}}<br/>
+                        Lat: {{vm.place.geometry.location.lat}}<br/>
+                        address : {{vm.address}}
+                    </div>
+                    <ng-map id="foomap">
+                        <marker position="{{vm.place.geometry.location}}"></marker>
+                    </ng-map>
+
+                    <div class="form-group">
+                        <label class="control-label" translate="project1App.space.price" for="field_price">Price</label>
+                        <input type="number" class="form-control" name="price" id="field_price"
+                               ng-model="space.price"
+                        />
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label" translate="project1App.space.personMax"
+                               for="field_personMax">PersonMax</label>
+                        <input type="number" class="form-control" name="personMax" id="field_personMax"
+                               ng-model="space.personMax"
+                        />
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label" translate="project1App.space.streetAddress" for="field_streetAddress">StreetAddress</label>
+                        <input type="text" class="form-control" name="streetAddress" id="field_streetAddress"
+                               ng-model="space.streetAddress"
+                        />
+                    </div>
+
+                    <div class="form-group">
+                        <label translate="project1App.space.service" for="field_service">service</label>
+                        <select class="form-control" id="field_service" multiple name="service" ng-model="space.services"
+                                ng-options="service as service.name for service in services track by service.id"></select>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="submit" ng-disabled="editForm.$invalid || isSaving" class="btn btn-primary">
+                        <span class="glyphicon glyphicon-save"></span>&nbsp;<span translate="entity.action.save">Save</span>
+                    </button>
+                </div>
             </form>
-            <div class="artwork__holder">
+            <style>
+                .pac-container {
+                    z-index: 2000000;
+                }
+            </style>
 
-            </div>
-
-
-
-            <div class="form-group">
-                <label class="control-label" translate="project1App.space.description" for="field_description">Description</label>
-                <input type="text" class="form-control" name="description" id="field_description"
-                       ng-model="space.description"
-                />
-            </div>
-            <input class="form-control" autocomplete="no" places-auto-complete size=80
-                   ng-model="vm.address"
-                   component-restrictions="{country:'es'}"
-                   types="{{types}}"
-                   on-place-changed="vm.placeChanged()"/> <br/>
-            <div ng-show="vm.place">
-                Address = {{vm.place.formatted_address}} <br/>
-                Location: {{vm.place.geometry.location}}<br/>
-                Lat: {{vm.place.geometry.location.lat}}<br/>
-                address : {{vm.address}}
-            </div>
-            <ng-map id="foomap">
-                <marker position="{{vm.place.geometry.location}}"></marker>
-            </ng-map>
-
-            <div class="form-group">
-                <label class="control-label" translate="project1App.space.price" for="field_price">Price</label>
-                <input type="number" class="form-control" name="price" id="field_price"
-                       ng-model="space.price"
-                />
-            </div>
-            <div class="form-group">
-                <label class="control-label" translate="project1App.space.personMax"
-                       for="field_personMax">PersonMax</label>
-                <input type="number" class="form-control" name="personMax" id="field_personMax"
-                       ng-model="space.personMax"
-                />
-            </div>
-            <div class="form-group">
-                <label class="control-label" translate="project1App.space.streetAddress" for="field_streetAddress">StreetAddress</label>
-                <input type="text" class="form-control" name="streetAddress" id="field_streetAddress"
-                       ng-model="space.streetAddress"
-                />
-            </div>
-
-            <div class="form-group">
-                <label translate="project1App.space.service" for="field_service">service</label>
-                <select class="form-control" id="field_service" multiple name="service" ng-model="space.services"
-                        ng-options="service as service.name for service in services track by service.id"></select>
-            </div>
         </div>
-        <div class="modal-footer">
-            <button type="submit" ng-disabled="editForm.$invalid || isSaving" class="btn btn-primary">
-                <span class="glyphicon glyphicon-save"></span>&nbsp;<span translate="entity.action.save">Save</span>
-            </button>
-        </div>
-    </form>
-    <style>
-        .pac-container {
-            z-index: 2000000;
-        }
-    </style>
+    </div>
 </div>
