--- a/src/main/webapp/scripts/app/entities/space/spaces.html
+++ b/src/main/webapp/scripts/app/entities/space/spaces.html
@@ -1,217 +1,131 @@
 
-<style>
-    .material{
-        box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
-        border:none;
-        overflow: hidden;
-        background-color: white;
-        border-radius: 3px;
-        margin-top: 20px;
-        padding: 20px;
-    }
-    .profile-img{
-        width: 100%;
-        height: 100%;
-    }
-    paper-tabs{
-        background-color: rgb(0, 188, 212);
-        color: rgb(233, 30, 99);
-    }
-    .paper-tab-0 paper-ripple.paper-tab{
-        color: white;
-    }
-    .paper-tabs-0 #selectionBar.paper-tabs{
-        background-color: rgb(233, 30, 99);
-    }
-    .paper-tab-0:not(.iron-selected) > .tab-content.paper-tab{
-        opacity: 0.54;
-    }
-    .titlereview{
-        margin-top: 5px;
-        margin-bottom: 5px;
-    }
-    .reviews{
-        padding: 10px;
-    }
-    .reviews a{
-        text-decoration: none;
-    }
-    .reviews:hover{
-        background-color: #e4e4e4;
-    }
-    img.reviewimg{
-        float: left;
-        border-radius: 50%;
-        margin-right: 10px;
-    }
-    span.name{
-        vertical-align:top;
-        color: rgba(0,0,0,0.87);
-        font-weight: bold;
-    }
-    span.time{
-        vertical-align:top;
-        color: rgba(0,0,0,0.54);
-        float: right;
-    }
-    span.text{
-        vertical-align:top;
-        color: rgba(0,0,0,0.87);
-    }
-</style>
 
 <div class="container">
     <div class="row">
-        <div class="col-md-10 col-md-offset-1">
-            <div class="material">
-                <div class="col-md-3">
-                    <img class="profile-img" ng-src="profile/{{account.login}}.jpg">
+            <div class="col-md-6 col-md-push-1">
+                <div class="material">
+                    <div>
+                        <h2>Tus espacios</h2>
+                        <jh-alert></jh-alert>
+                        <div class="container-fluid">
+                            <div class="row">
+                                <div class="col-xs-4 no-padding-left">
+                                    <md-button class="md-raised fancy" ui-sref="space.new" >
+                                        <i class="material-icons">add</i>
+                                        <span
+                                            class="hidden-xs" translate="project1App.space.home.createLabel">Create new Space
+                                        </span>
+                                    </md-button>
+                                </div>
+                            </div>
+                        </div>
+                        <br/>
+                        <div class="table-responsive">
+                            <table class="jh-table table table-striped">
+                                <thead>
+                                <tr jh-sort="predicate" ascending="reverse" callback="loadAll()">
+                                    <th jh-sort-by="id"><span translate="global.field.id">ID</span> <span class="glyphicon glyphicon-sort"></span></th>
+                                    <th jh-sort-by="name"><span translate="project1App.space.name">Name</span> <span class="glyphicon glyphicon-sort"></span></th>
+                                    <th jh-sort-by="description"><span translate="project1App.space.description">Description</span> <span class="glyphicon glyphicon-sort"></span></th>
+                                    <th jh-sort-by="price"><span translate="project1App.space.price">Price</span> <span class="glyphicon glyphicon-sort"></span></th>
+                                    <th jh-sort-by="personMax"><span translate="project1App.space.personMax">PersonMax</span> <span class="glyphicon glyphicon-sort"></span></th>
+                                    <th jh-sort-by="streetAddress"><span translate="project1App.space.streetAddress">StreetAddress</span> <span class="glyphicon glyphicon-sort"></span></th>
+                                    <th></th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr ng-repeat="space in spaces track by space.id">
+                                    <td><a ui-sref="space.detail({id:space.id})">{{space.id}}</a></td>
+                                    <td>{{space.name}}</td>
+                                    <td>{{space.description | limitTo: 35}}{{space.description.length > 35 ? '...' : ''}}</td>
+                                    <td>{{space.price}}</td>
+                                    <td>{{space.personMax}}</td>
+                                    <td>{{space.streetAddress}}</td>
+                                    <td class="text-right">
+                                        <div class="btn-group flex-btn-group-container">
+                                            <md-button class="edit" type="submit"
+                                                          ui-sref="space.edit({id:space.id})">
+                                                <i class="material-icons">edit</i>
+                                                <span class="hidden-xs hidden-sm" translate="entity.action.edit"></span>
+                                            </md-button>
+                                            <md-button class="delete" type="submit"
+                                                          ui-sref="space.delete({id:space.id})">
+                                                <i class="material-icons">delete</i>
+                                                <span class="hidden-xs hidden-sm" translate="entity.action.delete"></span>
+                                            </md-button>
+                                        </div>
+                                    </td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                        <div class="text-center">
+                            <uib-pagination class="pagination-sm" total-items="totalItems" ng-model="page" ng-change="loadAll()"></uib-pagination>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-md-5">
+            </div>
+        <div class="col-md-4 col-md-push-1">
+            <div class="material">
+                    <img ng-src="profile/{{account.login}}.jpg">
                     <div>
                         <h3 style="color: rgba(0,0,0,0.87);">{{account.firstName}}
                             {{account.lastName}}</h3>
                     </div>
                     <h4 style="color: rgba(0,0,0,0.54);">{{account.login}}</h4>
+                <p>{{account.description}}</p>
                     <div style="line-height: 40px;">
-                        <iron-icon icon="icons:mail" item-icon></iron-icon>{{account.email}}<br/>
-                        <iron-icon icon="icons:language" item-icon></iron-icon>{{account.langKey}}
+                        <i class="material-icons profile-icon">mail</i>{{account.email}}<br/>
+                        <i class="material-icons profile-icon">language</i>{{account.langKey}}
                     </div>
                     <div>
-                        <paper-button ui-sref="password" class="fancy">Cambiar contraseña</paper-button>
-                        <paper-button ui-sref="edit" class="fancy">Editar perfil</paper-button>
+                        <md-button ui-sref="password"><i class="material-icons profile-button">lock_outline</i> Contraseña</md-button>
+                        <md-button ui-sref="edit"><i class="material-icons profile-button">edit</i> Perfil</md-button>
                     </div>
-                </div>
-                <div class="col-md-4">
-                </div>
-            </div>
-        </div>
-        <div class="col-md-6 col-md-push-1">
-            <div class="material">
-                <div>
-                    <h2>Tus espacios</h2>
-                    <jh-alert></jh-alert>
-                    <div class="container-fluid">
-                        <div class="row">
-                            <div class="col-xs-4 no-padding-left">
-                                <paper-button raised class="fancy" ui-sref="space.new" >
-                                    <span class="glyphicon glyphicon-plus"></span>
-                    <span
-                        class="hidden-xs"                        translate="project1App.space.home.createLabel">Create new Space
-                    </span>
-                                </paper-button>
-                            </div>
-                            <div class="col-xs-8 no-padding-right">
-                                <form name="searchForm" class="form-inline">
-                                    <div class="input-group pull-right" >
-                                        <input style="z-index:0" type="text" class="form-control" ng-model="searchQuery" id="searchQuery" placeholder="{{ 'project1App.space.home.search' | translate }}">
-                        <span  class="input-group-btn width-min" >
-                            <button class="btn btn-info" ng-click="search()">
-                                <span class="glyphicon glyphicon-search"></span>
-                            </button>
-                        </span>
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-                    <br/>
-                    <div class="table-responsive">
-                        <table class="jh-table table table-striped">
-                            <thead>
-                            <tr jh-sort="predicate" ascending="reverse" callback="loadAll()">
-                                <th jh-sort-by="id"><span translate="global.field.id">ID</span> <span class="glyphicon glyphicon-sort"></span></th>
-                                <th jh-sort-by="name"><span translate="project1App.space.name">Name</span> <span class="glyphicon glyphicon-sort"></span></th>
-                                <th jh-sort-by="description"><span translate="project1App.space.description">Description</span> <span class="glyphicon glyphicon-sort"></span></th>
-                                <th jh-sort-by="price"><span translate="project1App.space.price">Price</span> <span class="glyphicon glyphicon-sort"></span></th>
-                                <th jh-sort-by="personMax"><span translate="project1App.space.personMax">PersonMax</span> <span class="glyphicon glyphicon-sort"></span></th>
-                                <th jh-sort-by="streetAddress"><span translate="project1App.space.streetAddress">StreetAddress</span> <span class="glyphicon glyphicon-sort"></span></th>
-                                <th></th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            <tr ng-repeat="space in spaces track by space.id">
-                                <td><a ui-sref="space.detail({id:space.id})">{{space.id}}</a></td>
-                                <td>{{space.name}}</td>
-                                <td>{{space.description | limitTo: 35}}{{space.description.length > 35 ? '...' : ''}}</td>
-                                <td>{{space.price}}</td>
-                                <td>{{space.personMax}}</td>
-                                <td>{{space.streetAddress}}</td>
-                                <td class="text-right">
-                                    <div class="btn-group flex-btn-group-container">
-                                        <paper-button class="edit" type="submit"
-                                                      ui-sref="space.edit({id:space.id})">
-                                            <span class="glyphicon glyphicon-pencil"></span>
-                                            <span class="hidden-xs hidden-sm" translate="entity.action.edit"></span>
-                                        </paper-button>
-                                        <paper-button class="delete" type="submit"
-                                                      ui-sref="space.delete({id:space.id})">
-                                            <span class="glyphicon glyphicon-remove-circle"></span>
-                                            <span class="hidden-xs hidden-sm" translate="entity.action.delete"></span>
-                                        </paper-button>
-                                    </div>
-                                </td>
-                            </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                    <div class="text-center">
-                        <uib-pagination class="pagination-sm" total-items="totalItems" ng-model="page" ng-change="loadAll()"></uib-pagination>
-                    </div>
-                </div>
             </div>
         </div>
         <div class="col-md-4 col-md-push-1">
             <div class="material" style="padding: 0px;">
-                <paper-tabs selected="0">
-                    <paper-tab ng-click="active = 1">Tus reviews</paper-tab>
-                    <paper-tab ng-click="active = 2">Reviews de otros</paper-tab>
-                </paper-tabs>
-
-                <iron-pages selected="0">
-                    <div>
-                        <div class="reviews" ng-repeat="review in reviews">
-                            <a data-toggle="modal" data-target="#myModal" href="#/spaces" ng-click="onClickMarker(review)">
-                                <div style="height: 55px;">
-                                    <img class="reviewimg" height="100%" src="http://placehold.it/250x250">
-                                    <div style="height:100%; padding-top: 3px;">
-                                        <h5 class="titlereview">
-                                            <span class="name">{{review.space.name | limitTo: 15}}{{review.text.length > 15 ? '...' : ''}}</span>
-                                            <span class="time">{{review.time | date:"MM/dd/yy 'at' h:mma"}}</span><br/>
-                                        </h5>
-                                        <span class="text">{{review.text | limitTo: 35}}{{review.text.length > 35 ? '...' : ''}}</span>
+                <div ng-cloak>
+                    <md-content>
+                        <md-tabs md-dynamic-height md-border-bottom>
+                            <md-tab label="Tus reviews">
+                                <md-content class="md-padding">
+                                    <div ng-repeat="review in reviews">
+                                        <a class="delete-a" data-toggle="modal" data-target="#myModal" href="#/spaces" ng-click="onClickMarker(review)">
+                                            <md-list-item class="md-3-line">
+                                                <img ng-src="profile/{{review.user.login}}.jpg" class="md-avatar" alt="{{review.user.login}}" />
+                                                <div class="md-list-item-text" layout="column">
+                                                    <h3>{{review.space.name | limitTo: 15}}{{review.text.length > 15 ? '...' : ''}}</h3>
+                                                    <h4>{{review.time | date:"MM/dd/yy 'at' h:mma"}}</h4>
+                                                    <p>{{review.text | limitTo: 35}}{{review.text.length > 35 ? '...' : ''}}</p>
+                                                </div>
+                                            </md-list-item>
+                                        </a>
                                     </div>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                    <div>
-                        <div class="reviews" ng-repeat="reviewBySpace in reviewsBySpace">
-                            <a data-toggle="modal" data-target="#myModal" href="#/spaces" ng-click="onClickMarker(reviewBySpace)">
-                                <div style="height: 55px;">
-                                    <img class="reviewimg" height="100%" src="http://placehold.it/250x250">
-                                    <div style="height:100%; padding-top: 3px;">
-                                        <h5 class="titlereview">
-                                            <span class="name">{{reviewBySpace.space.name | limitTo: 15}}{{reviewBySpace.text.length > 15 ? '...' : ''}}</span>
-                                            <span class="time">{{reviewBySpace.time | date:"MM/dd/yy 'at' h:mma"}}</span><br/>
-                                        </h5>
-                                        <span class="text">{{reviewBySpace.text | limitTo: 35}}{{reviewBySpace.text.length > 35 ? '...' : ''}}</span>
+                                </md-content>
+                            </md-tab>
+                            <md-tab label="Reviews de otros">
+                                <md-content class="md-padding">
+                                    <div>
+                                        <div ng-repeat="reviewBySpace in reviewsBySpace">
+                                            <a class="delete-a" data-toggle="modal" data-target="#myModal" href="#/spaces" ng-click="onClickMarker(reviewBySpace)">
+                                                <md-list-item class="md-3-line" ng-repeat="reviewBySpace in reviewsBySpace">
+                                                    <img ng-src="profile/{{reviewBySpace.user.login}}.jpg" class="md-avatar" alt="{{reviewBySpace.user.login}}" />
+                                                    <div class="md-list-item-text" layout="column">
+                                                        <h3>{{reviewBySpace.space.name | limitTo: 15}}{{reviewBySpace.text.length > 15 ? '...' : ''}}</h3>
+                                                        <h4>{{reviewBySpace.time | date:"MM/dd/yy 'at' h:mma"}}</h4>
+                                                        <p>{{reviewBySpace.text | limitTo: 35}}{{reviewBySpace.text.length > 35 ? '...' : ''}}</p>
+                                                    </div>
+                                                </md-list-item>
+                                            </a>
+                                        </div>
                                     </div>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                </iron-pages>
-
-                <script>
-                    var pages = document.querySelector('iron-pages');
-                    var tabs = document.querySelector('paper-tabs');
-
-                    tabs.addEventListener('iron-select', function() {
-                        pages.selected = tabs.selected;
-                    });
-                </script>
-
+                                </md-content>
+                            </md-tab>
+                        </md-tabs>
+                    </md-content>
+                </div>
 
             </div>
         </div>
@@ -239,7 +153,8 @@
                     </div>
                 </a>
                 <div class="modal-footer">
-                    <paper-button raised data-dismiss="modal">Close</paper-button>
+
+                    <md-button data-dismiss="modal">Close</md-button>
                 </div>
             </div>
         </div>
