--- a/src/main/webapp/scripts/app/main/main.html
+++ b/src/main/webapp/scripts/app/main/main.html
@@ -1,25 +1,17 @@
 <div ng-cloak>
-    <div class="row">
+    <div class="row" style="margin-right: 0;margin-left: 0;">
         <!-- add toaster -->
-        <div class="col-lg-6" id="col-left">
+        <div class="col-lg-6 col-xs-12" id="col-left" style="margin-top: 79px">
             <div class="padding">
                 <a class="paper-item-link" role="button" data-toggle="collapse" href="#collapseExample"
                    aria-expanded="false" aria-controls="collapseExample">
-                    <paper-button class="fancy" raised>
-                        <iron-icon icon="icons:filter-list"></iron-icon>
-                        Filters
-                    </paper-button>
+                    <md-button class="fancy"><i class="material-icons">filter_list</i>Filters</md-button>
                 </a>
                 <div class="no-padding-right" style="float: right">
                     <form name="searchForm" class="form-inline">
                         <div>
                             <input type="text" class="form-control" id="searchQuery"
                                    placeholder="Buscar..." ng-model="searchSpace.space.streetAddress">
-                        <span>
-                            <button class="btn btn-info" ng-click="search()">
-                                <span class="glyphicon glyphicon-search"></span>
-                            </button>
-                        </span>
                         </div>
                     </form>
                 </div>
@@ -43,36 +35,25 @@
                             </div>
                             <div class="col-lg-6">
                                 <h4 class="co-filters">Ordenar por:</h4>
-                                <paper-radio-group>
-                                    <paper-radio-button name="preciomax">Precio mayor</paper-radio-button>
-                                    <paper-radio-button name="preciomin">Precio menor</paper-radio-button>
-                                    <paper-radio-button name="recent">Recientes</paper-radio-button>
-                                </paper-radio-group>
+                                <md-radio-group ng-model="data.group1">
+                                    <md-radio-button value="Apple">Precio mayor</md-radio-button>
+                                    <md-radio-button value="Banana"> Precio menor </md-radio-button>
+                                    <md-radio-button value="Mango">Recientes</md-radio-button>
+                                </md-radio-group>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-lg-12">
                                 <h4 class="co-filters">Services</h4>
-                                <div class="col-lg-3">
-                                    <paper-checkbox>WiFi</paper-checkbox>
-                                    <paper-checkbox>WiFi</paper-checkbox>
-                                </div>
-                                <div class="col-lg-3">
-                                    <paper-checkbox>WiFi</paper-checkbox>
-                                    <paper-checkbox>WiFi</paper-checkbox>
-                                </div>
-                                <div class="col-lg-3">
-                                    <paper-checkbox>WiFi</paper-checkbox>
-                                    <paper-checkbox>WiFi</paper-checkbox>
-                                </div>
-                                <div class="col-lg-3">
-                                    <paper-checkbox>WiFi</paper-checkbox>
-                                    <paper-checkbox>WiFi</paper-checkbox>
+                                <div class="col-lg-3" ng-repeat="service in services">
+                                        <md-checkbox>
+                                            {{ service.name }}
+                                        </md-checkbox>
                                 </div>
                             </div>
                         </div>
                         <div class="row">
-                            <paper-button style="float: right">Clear All</paper-button>
+                            <md-button style="float: right">Clear All</md-button>
                         </div>
                     </div>
                 </div>
@@ -82,7 +63,7 @@
                 toaster-options="{'time-out': 2000, 'close-button':true, 'position-class': 'toast-bottom-right'}"></toaster-container>
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-sm-6 col-md-6" ng-repeat="spaceDTO in spaces | filter: searchSpace">
+                    <div class="col-sm-12 col-md-12 col-lg-6" ng-repeat="spaceDTO in spaces | filter: searchSpace">
                         <div class="thumbnail material">
                             <div style="height: 150px;">
                                 <a ui-sref="space.detail({id:spaceDTO.space.id})">
@@ -91,9 +72,11 @@
                                 </a>
                             </div>
                             <a ng-click="like(spaceDTO.space.id)" aria-label="More">
-                                <paper-fab ng-class="{true: 'fav2', false: 'fav'}[spaceDTO.liked == false]"
+                                <md-button ng-class="{true: 'fav2', false: 'fav'}[spaceDTO.liked == false]"
                                            icon="favorite-border"
-                                           style="float: right; top: -30px; right: 18px; background-color: white;"></paper-fab>
+                                           style="float: right; top: -30px; right: 18px; background-color: white;" class="md-fab">
+                                    <i class="material-icons">favorite_border</i>
+                                </md-button>
                             </a>
                             <a ui-sref="space.detail({id:spaceDTO.space.id})" class="decoration">
                                 <div class="caption">
@@ -129,7 +112,7 @@
                     border-radius: 2px;
                 }
                 #col-right {
-                    height: 100%;
+                    height: calc(100% - 64px) !important;
                     float: right;
                     padding: 0;
                     left: 54%;
@@ -153,16 +136,7 @@
                     border-radius: 3px;
                 }
 
-                paper-fab[icon="favorite-border"] {
-                    color: #F44336;
-                }
-
-                paper-fab.fav {
-                    background: #F44336 !important;
-                    color: white;
-                }
-
-                paper-button.fancy {
+                .fancy {
                     background: #E91E63;
                     color: white;
                 }
@@ -228,7 +202,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-6" style="height: 100%;" id="col-right" ng-init="showDetails==true">
+            <div class="col-lg-6 hidden-xs" style="height: 100%;" id="col-right" ng-init="showDetails==true">
                 <ng-map
                     zoom-control="true"
                     zoom-control-options='{style:"small",position:"top_right"}'
